src/y.output
   0  $accept : program $end

   1  program : definitions

   2  definitions : class definitions
   3              | func definitions
   4              | decl definitions
   5              |

   6  meth_list : methodef meth_list
   7            |

   8  methodef : meth

   9  $$1 :

  10  class : modifier CLASS ID $$1 bodyclass

  11  modifier :
  12           | PUBLIC
  13           | ABSTRACT

  14  fields : field fields
  15         |

  16  field : '@' ID ':' type attrs
  17        | '@' ID ':' type '=' expr attrs

  18  attrs : ',' ID attrs
  19        | ',' ID '=' expr attrs
  20        |

  21  bodyclass : '{' fields meth_list '}'

  22  $$2 :

  23  $$3 :

  24  meth : modifier ID $$2 '(' params ')' RIGHTARROW type $$3 body

  25  $$4 :

  26  $$5 :

  27  func : FUNC ID $$4 '(' params ')' RIGHTARROW type $$5 body

  28  params : formals ID ':' type
  29         |

  30  formals : formals ID ':' type ','
  31          |

  32  type : INT
  33       | REAL
  34       | BOOL
  35       | STR
  36       | ID

  37  body : '{' decls stmts '}'

  38  decls : decl_list decl
  39        |

  40  decl_list : decl_list decl
  41            |

  42  $$6 :

  43  decl : VAR ID ':' type $$6 vars separator

  44  $$7 :

  45  decl : VAR ID ':' type '[' DEC_CONST ']' $$7 vars separator

  46  $$8 :

  47  decl : VAR ID ':' type '=' expr $$8 vars separator

  48  $$9 :

  49  vars : ',' ID $$9 vars

  50  $$10 :

  51  vars : ',' ID '=' expr $$10 vars
  52       |

  53  stmts : stmts stmt
  54        |

  55  singlestmt : assign
  56             | addassign
  57             | subassign
  58             | listedassign
  59             | PRINTLN inline
  60             | READ expr ',' location
  61             | expr

  62  code :

  63  stmt : assign separator
  64       | addassign separator
  65       | subassign separator
  66       | listedassign separator
  67       | RETURN expr separator
  68       | IF code '(' expr ')' stmt

  69  $$11 :

  70  stmt : IF code '(' expr ')' stmt ELSE $$11 stmt
  71       | singlestmt IF expr separator
  72       | singlestmt UNLESS expr separator

  73  $$12 :

  74  stmt : WHILE $$12 '(' expr ')' stmt

  75  $$13 :

  76  stmt : expr TIMES $$13 stmt
  77       | BREAK separator
  78       | block
  79       | PRINTLN inline separator
  80       | READ expr ',' location separator
  81       | expr separator
  82       | separator

  83  separator : ';'

  84  inline : expr ',' inline
  85         | expr

  86  block : '{' stmts '}'

  87  addassign : location ADDASSIGN expr

  88  subassign : location SUBASSIGN expr

  89  assign : location '=' expr
  90         | location '=' assign

  91  listedassign : location ',' nestedassign ',' expr

  92  nestedassign : location ',' nestedassign ',' expr
  93               | location '=' expr

  94  method : ID

  95  location : ID

  96  expr : expr OR logAnd_expr
  97       | logAnd_expr

  98  logAnd_expr : logAnd_expr AND not_expr
  99              | not_expr

 100  not_expr : NOT comp_expr
 101           | comp_expr

 102  comp_expr : add_expr relop add_expr
 103            | add_expr

 104  relop : GE
 105        | '>'
 106        | LE
 107        | '<'
 108        | NE
 109        | EQ

 110  add_expr : add_expr addop term
 111           | term

 112  addop : '+'
 113        | '-'

 114  term : term mulop factor
 115       | factor

 116  mulop : '*'
 117        | '/'
 118        | IDIV
 119        | '%'

 120  factor : incdec
 121         | '(' expr ')'
 122         | location
 123         | DEC_CONST
 124         | REAL_DEC_CONST
 125         | TRUE
 126         | FALSE
 127         | SELF
 128         | method '(' actuals ')'
 129         | ID '.' method '(' actuals ')'
 130         | '-' DEC_CONST
 131         | '-' REAL_DEC_CONST
 132         | LITERAL

 133  incdec : location INC
 134         | INC location
 135         | location DEC
 136         | DEC location

 137  actuals : args expr
 138          |

 139  args : args expr ','
 140       |

state 0
	$accept : . program $end  (0)
	definitions : .  (5)
	modifier : .  (11)

	FUNC  shift 1
	PUBLIC  shift 2
	ABSTRACT  shift 3
	VAR  shift 4
	$end  reduce 5
	CLASS  reduce 11

	program  goto 5
	definitions  goto 6
	class  goto 7
	modifier  goto 8
	func  goto 9
	decl  goto 10


state 1
	func : FUNC . ID $$4 '(' params ')' RIGHTARROW type $$5 body  (27)

	ID  shift 11
	.  error


state 2
	modifier : PUBLIC .  (12)

	.  reduce 12


state 3
	modifier : ABSTRACT .  (13)

	.  reduce 13


state 4
	decl : VAR . ID ':' type $$6 vars separator  (43)
	decl : VAR . ID ':' type '[' DEC_CONST ']' $$7 vars separator  (45)
	decl : VAR . ID ':' type '=' expr $$8 vars separator  (47)

	ID  shift 12
	.  error


state 5
	$accept : program . $end  (0)

	$end  accept


state 6
	program : definitions .  (1)

	.  reduce 1


state 7
	definitions : class . definitions  (2)
	definitions : .  (5)
	modifier : .  (11)

	FUNC  shift 1
	PUBLIC  shift 2
	ABSTRACT  shift 3
	VAR  shift 4
	$end  reduce 5
	CLASS  reduce 11

	definitions  goto 13
	class  goto 7
	modifier  goto 8
	func  goto 9
	decl  goto 10


state 8
	class : modifier . CLASS ID $$1 bodyclass  (10)

	CLASS  shift 14
	.  error


state 9
	definitions : func . definitions  (3)
	definitions : .  (5)
	modifier : .  (11)

	FUNC  shift 1
	PUBLIC  shift 2
	ABSTRACT  shift 3
	VAR  shift 4
	$end  reduce 5
	CLASS  reduce 11

	definitions  goto 15
	class  goto 7
	modifier  goto 8
	func  goto 9
	decl  goto 10


state 10
	definitions : decl . definitions  (4)
	definitions : .  (5)
	modifier : .  (11)

	FUNC  shift 1
	PUBLIC  shift 2
	ABSTRACT  shift 3
	VAR  shift 4
	$end  reduce 5
	CLASS  reduce 11

	definitions  goto 16
	class  goto 7
	modifier  goto 8
	func  goto 9
	decl  goto 10


state 11
	func : FUNC ID . $$4 '(' params ')' RIGHTARROW type $$5 body  (27)
	$$4 : .  (25)

	.  reduce 25

	$$4  goto 17


state 12
	decl : VAR ID . ':' type $$6 vars separator  (43)
	decl : VAR ID . ':' type '[' DEC_CONST ']' $$7 vars separator  (45)
	decl : VAR ID . ':' type '=' expr $$8 vars separator  (47)

	':'  shift 18
	.  error


state 13
	definitions : class definitions .  (2)

	.  reduce 2


state 14
	class : modifier CLASS . ID $$1 bodyclass  (10)

	ID  shift 19
	.  error


state 15
	definitions : func definitions .  (3)

	.  reduce 3


state 16
	definitions : decl definitions .  (4)

	.  reduce 4


state 17
	func : FUNC ID $$4 . '(' params ')' RIGHTARROW type $$5 body  (27)

	'('  shift 20
	.  error


state 18
	decl : VAR ID ':' . type $$6 vars separator  (43)
	decl : VAR ID ':' . type '[' DEC_CONST ']' $$7 vars separator  (45)
	decl : VAR ID ':' . type '=' expr $$8 vars separator  (47)

	INT  shift 21
	REAL  shift 22
	BOOL  shift 23
	STR  shift 24
	ID  shift 25
	.  error

	type  goto 26


state 19
	class : modifier CLASS ID . $$1 bodyclass  (10)
	$$1 : .  (9)

	.  reduce 9

	$$1  goto 27


state 20
	func : FUNC ID $$4 '(' . params ')' RIGHTARROW type $$5 body  (27)
	params : .  (29)
	formals : .  (31)

	')'  reduce 29
	ID  reduce 31

	params  goto 28
	formals  goto 29


state 21
	type : INT .  (32)

	.  reduce 32


state 22
	type : REAL .  (33)

	.  reduce 33


state 23
	type : BOOL .  (34)

	.  reduce 34


state 24
	type : STR .  (35)

	.  reduce 35


state 25
	type : ID .  (36)

	.  reduce 36


state 26
	decl : VAR ID ':' type . $$6 vars separator  (43)
	decl : VAR ID ':' type . '[' DEC_CONST ']' $$7 vars separator  (45)
	decl : VAR ID ':' type . '=' expr $$8 vars separator  (47)
	$$6 : .  (42)

	'='  shift 30
	'['  shift 31
	';'  reduce 42
	','  reduce 42

	$$6  goto 32


state 27
	class : modifier CLASS ID $$1 . bodyclass  (10)

	'{'  shift 33
	.  error

	bodyclass  goto 34


state 28
	func : FUNC ID $$4 '(' params . ')' RIGHTARROW type $$5 body  (27)

	')'  shift 35
	.  error


state 29
	params : formals . ID ':' type  (28)
	formals : formals . ID ':' type ','  (30)

	ID  shift 36
	.  error


state 30
	decl : VAR ID ':' type '=' . expr $$8 vars separator  (47)

	FALSE  shift 37
	TRUE  shift 38
	NOT  shift 39
	SELF  shift 40
	DEC_CONST  shift 41
	LITERAL  shift 42
	REAL_DEC_CONST  shift 43
	'('  shift 44
	'-'  shift 45
	ID  shift 46
	INC  shift 47
	DEC  shift 48
	.  error

	expr  goto 49
	logAnd_expr  goto 50
	not_expr  goto 51
	comp_expr  goto 52
	location  goto 53
	method  goto 54
	add_expr  goto 55
	term  goto 56
	factor  goto 57
	incdec  goto 58


state 31
	decl : VAR ID ':' type '[' . DEC_CONST ']' $$7 vars separator  (45)

	DEC_CONST  shift 59
	.  error


state 32
	decl : VAR ID ':' type $$6 . vars separator  (43)
	vars : .  (52)

	','  shift 60
	';'  reduce 52

	vars  goto 61


state 33
	bodyclass : '{' . fields meth_list '}'  (21)
	fields : .  (15)

	'@'  shift 62
	PUBLIC  reduce 15
	ABSTRACT  reduce 15
	'}'  reduce 15
	ID  reduce 15

	fields  goto 63
	field  goto 64


state 34
	class : modifier CLASS ID $$1 bodyclass .  (10)

	.  reduce 10


state 35
	func : FUNC ID $$4 '(' params ')' . RIGHTARROW type $$5 body  (27)

	RIGHTARROW  shift 65
	.  error


state 36
	params : formals ID . ':' type  (28)
	formals : formals ID . ':' type ','  (30)

	':'  shift 66
	.  error


state 37
	factor : FALSE .  (126)

	.  reduce 126


state 38
	factor : TRUE .  (125)

	.  reduce 125


state 39
	not_expr : NOT . comp_expr  (100)

	FALSE  shift 37
	TRUE  shift 38
	SELF  shift 40
	DEC_CONST  shift 41
	LITERAL  shift 42
	REAL_DEC_CONST  shift 43
	'('  shift 44
	'-'  shift 45
	ID  shift 46
	INC  shift 47
	DEC  shift 48
	.  error

	comp_expr  goto 67
	location  goto 53
	method  goto 54
	add_expr  goto 55
	term  goto 56
	factor  goto 57
	incdec  goto 58


state 40
	factor : SELF .  (127)

	.  reduce 127


state 41
	factor : DEC_CONST .  (123)

	.  reduce 123


state 42
	factor : LITERAL .  (132)

	.  reduce 132


state 43
	factor : REAL_DEC_CONST .  (124)

	.  reduce 124


state 44
	factor : '(' . expr ')'  (121)

	FALSE  shift 37
	TRUE  shift 38
	NOT  shift 39
	SELF  shift 40
	DEC_CONST  shift 41
	LITERAL  shift 42
	REAL_DEC_CONST  shift 43
	'('  shift 44
	'-'  shift 45
	ID  shift 46
	INC  shift 47
	DEC  shift 48
	.  error

	expr  goto 68
	logAnd_expr  goto 50
	not_expr  goto 51
	comp_expr  goto 52
	location  goto 53
	method  goto 54
	add_expr  goto 55
	term  goto 56
	factor  goto 57
	incdec  goto 58


state 45
	factor : '-' . DEC_CONST  (130)
	factor : '-' . REAL_DEC_CONST  (131)

	DEC_CONST  shift 69
	REAL_DEC_CONST  shift 70
	.  error


state 46
	method : ID .  (94)
	location : ID .  (95)
	factor : ID . '.' method '(' actuals ')'  (129)

	'.'  shift 71
	IF  reduce 95
	TIMES  reduce 95
	UNLESS  reduce 95
	AND  reduce 95
	OR  reduce 95
	PUBLIC  reduce 95
	ABSTRACT  reduce 95
	'('  reduce 94
	')'  reduce 95
	'}'  reduce 95
	'*'  reduce 95
	'/'  reduce 95
	'+'  reduce 95
	'-'  reduce 95
	'='  reduce 95
	';'  reduce 95
	','  reduce 95
	IDIV  reduce 95
	GE  reduce 95
	'>'  reduce 95
	LE  reduce 95
	'<'  reduce 95
	NE  reduce 95
	EQ  reduce 95
	ID  reduce 95
	INC  reduce 95
	DEC  reduce 95
	ADDASSIGN  reduce 95
	SUBASSIGN  reduce 95
	'@'  reduce 95
	'%'  reduce 95


state 47
	incdec : INC . location  (134)

	ID  shift 72
	.  error

	location  goto 73


state 48
	incdec : DEC . location  (136)

	ID  shift 72
	.  error

	location  goto 74


state 49
	decl : VAR ID ':' type '=' expr . $$8 vars separator  (47)
	expr : expr . OR logAnd_expr  (96)
	$$8 : .  (46)

	OR  shift 75
	';'  reduce 46
	','  reduce 46

	$$8  goto 76


state 50
	expr : logAnd_expr .  (97)
	logAnd_expr : logAnd_expr . AND not_expr  (98)

	AND  shift 77
	IF  reduce 97
	TIMES  reduce 97
	UNLESS  reduce 97
	OR  reduce 97
	PUBLIC  reduce 97
	ABSTRACT  reduce 97
	')'  reduce 97
	'}'  reduce 97
	';'  reduce 97
	','  reduce 97
	ID  reduce 97
	'@'  reduce 97


state 51
	logAnd_expr : not_expr .  (99)

	.  reduce 99


state 52
	not_expr : comp_expr .  (101)

	.  reduce 101


state 53
	factor : location .  (122)
	incdec : location . INC  (133)
	incdec : location . DEC  (135)

	INC  shift 78
	DEC  shift 79
	IF  reduce 122
	TIMES  reduce 122
	UNLESS  reduce 122
	AND  reduce 122
	OR  reduce 122
	PUBLIC  reduce 122
	ABSTRACT  reduce 122
	')'  reduce 122
	'}'  reduce 122
	'*'  reduce 122
	'/'  reduce 122
	'+'  reduce 122
	'-'  reduce 122
	';'  reduce 122
	','  reduce 122
	IDIV  reduce 122
	GE  reduce 122
	'>'  reduce 122
	LE  reduce 122
	'<'  reduce 122
	NE  reduce 122
	EQ  reduce 122
	ID  reduce 122
	'@'  reduce 122
	'%'  reduce 122


state 54
	factor : method . '(' actuals ')'  (128)

	'('  shift 80
	.  error


state 55
	comp_expr : add_expr . relop add_expr  (102)
	comp_expr : add_expr .  (103)
	add_expr : add_expr . addop term  (110)

	'+'  shift 81
	'-'  shift 82
	GE  shift 83
	'>'  shift 84
	LE  shift 85
	'<'  shift 86
	NE  shift 87
	EQ  shift 88
	IF  reduce 103
	TIMES  reduce 103
	UNLESS  reduce 103
	AND  reduce 103
	OR  reduce 103
	PUBLIC  reduce 103
	ABSTRACT  reduce 103
	')'  reduce 103
	'}'  reduce 103
	';'  reduce 103
	','  reduce 103
	ID  reduce 103
	'@'  reduce 103

	relop  goto 89
	addop  goto 90


state 56
	add_expr : term .  (111)
	term : term . mulop factor  (114)

	'*'  shift 91
	'/'  shift 92
	IDIV  shift 93
	'%'  shift 94
	IF  reduce 111
	TIMES  reduce 111
	UNLESS  reduce 111
	AND  reduce 111
	OR  reduce 111
	PUBLIC  reduce 111
	ABSTRACT  reduce 111
	')'  reduce 111
	'}'  reduce 111
	'+'  reduce 111
	'-'  reduce 111
	';'  reduce 111
	','  reduce 111
	GE  reduce 111
	'>'  reduce 111
	LE  reduce 111
	'<'  reduce 111
	NE  reduce 111
	EQ  reduce 111
	ID  reduce 111
	'@'  reduce 111

	mulop  goto 95


state 57
	term : factor .  (115)

	.  reduce 115


state 58
	factor : incdec .  (120)

	.  reduce 120


state 59
	decl : VAR ID ':' type '[' DEC_CONST . ']' $$7 vars separator  (45)

	']'  shift 96
	.  error


state 60
	vars : ',' . ID $$9 vars  (49)
	vars : ',' . ID '=' expr $$10 vars  (51)

	ID  shift 97
	.  error


state 61
	decl : VAR ID ':' type $$6 vars . separator  (43)

	';'  shift 98
	.  error

	separator  goto 99


state 62
	field : '@' . ID ':' type attrs  (16)
	field : '@' . ID ':' type '=' expr attrs  (17)

	ID  shift 100
	.  error


state 63
	bodyclass : '{' fields . meth_list '}'  (21)
	meth_list : .  (7)
	modifier : .  (11)

	PUBLIC  shift 2
	ABSTRACT  shift 3
	'}'  reduce 7
	ID  reduce 11

	meth_list  goto 101
	modifier  goto 102
	methodef  goto 103
	meth  goto 104


state 64
	fields : field . fields  (14)
	fields : .  (15)

	'@'  shift 62
	PUBLIC  reduce 15
	ABSTRACT  reduce 15
	'}'  reduce 15
	ID  reduce 15

	fields  goto 105
	field  goto 64


state 65
	func : FUNC ID $$4 '(' params ')' RIGHTARROW . type $$5 body  (27)

	INT  shift 21
	REAL  shift 22
	BOOL  shift 23
	STR  shift 24
	ID  shift 25
	.  error

	type  goto 106


state 66
	params : formals ID ':' . type  (28)
	formals : formals ID ':' . type ','  (30)

	INT  shift 21
	REAL  shift 22
	BOOL  shift 23
	STR  shift 24
	ID  shift 25
	.  error

	type  goto 107


state 67
	not_expr : NOT comp_expr .  (100)

	.  reduce 100


state 68
	expr : expr . OR logAnd_expr  (96)
	factor : '(' expr . ')'  (121)

	OR  shift 75
	')'  shift 108
	.  error


state 69
	factor : '-' DEC_CONST .  (130)

	.  reduce 130


state 70
	factor : '-' REAL_DEC_CONST .  (131)

	.  reduce 131


state 71
	factor : ID '.' . method '(' actuals ')'  (129)

	ID  shift 109
	.  error

	method  goto 110


state 72
	location : ID .  (95)

	.  reduce 95


state 73
	incdec : INC location .  (134)

	.  reduce 134


state 74
	incdec : DEC location .  (136)

	.  reduce 136


state 75
	expr : expr OR . logAnd_expr  (96)

	FALSE  shift 37
	TRUE  shift 38
	NOT  shift 39
	SELF  shift 40
	DEC_CONST  shift 41
	LITERAL  shift 42
	REAL_DEC_CONST  shift 43
	'('  shift 44
	'-'  shift 45
	ID  shift 46
	INC  shift 47
	DEC  shift 48
	.  error

	logAnd_expr  goto 111
	not_expr  goto 51
	comp_expr  goto 52
	location  goto 53
	method  goto 54
	add_expr  goto 55
	term  goto 56
	factor  goto 57
	incdec  goto 58


state 76
	decl : VAR ID ':' type '=' expr $$8 . vars separator  (47)
	vars : .  (52)

	','  shift 60
	';'  reduce 52

	vars  goto 112


state 77
	logAnd_expr : logAnd_expr AND . not_expr  (98)

	FALSE  shift 37
	TRUE  shift 38
	NOT  shift 39
	SELF  shift 40
	DEC_CONST  shift 41
	LITERAL  shift 42
	REAL_DEC_CONST  shift 43
	'('  shift 44
	'-'  shift 45
	ID  shift 46
	INC  shift 47
	DEC  shift 48
	.  error

	not_expr  goto 113
	comp_expr  goto 52
	location  goto 53
	method  goto 54
	add_expr  goto 55
	term  goto 56
	factor  goto 57
	incdec  goto 58


state 78
	incdec : location INC .  (133)

	.  reduce 133


state 79
	incdec : location DEC .  (135)

	.  reduce 135


state 80
	factor : method '(' . actuals ')'  (128)
	actuals : .  (138)
	args : .  (140)

	FALSE  reduce 140
	TRUE  reduce 140
	NOT  reduce 140
	SELF  reduce 140
	DEC_CONST  reduce 140
	LITERAL  reduce 140
	REAL_DEC_CONST  reduce 140
	'('  reduce 140
	')'  reduce 138
	'-'  reduce 140
	ID  reduce 140
	INC  reduce 140
	DEC  reduce 140

	actuals  goto 114
	args  goto 115


state 81
	addop : '+' .  (112)

	.  reduce 112


state 82
	addop : '-' .  (113)

	.  reduce 113


state 83
	relop : GE .  (104)

	.  reduce 104


state 84
	relop : '>' .  (105)

	.  reduce 105


state 85
	relop : LE .  (106)

	.  reduce 106


state 86
	relop : '<' .  (107)

	.  reduce 107


state 87
	relop : NE .  (108)

	.  reduce 108


state 88
	relop : EQ .  (109)

	.  reduce 109


state 89
	comp_expr : add_expr relop . add_expr  (102)

	FALSE  shift 37
	TRUE  shift 38
	SELF  shift 40
	DEC_CONST  shift 41
	LITERAL  shift 42
	REAL_DEC_CONST  shift 43
	'('  shift 44
	'-'  shift 45
	ID  shift 46
	INC  shift 47
	DEC  shift 48
	.  error

	location  goto 53
	method  goto 54
	add_expr  goto 116
	term  goto 56
	factor  goto 57
	incdec  goto 58


state 90
	add_expr : add_expr addop . term  (110)

	FALSE  shift 37
	TRUE  shift 38
	SELF  shift 40
	DEC_CONST  shift 41
	LITERAL  shift 42
	REAL_DEC_CONST  shift 43
	'('  shift 44
	'-'  shift 45
	ID  shift 46
	INC  shift 47
	DEC  shift 48
	.  error

	location  goto 53
	method  goto 54
	term  goto 117
	factor  goto 57
	incdec  goto 58


state 91
	mulop : '*' .  (116)

	.  reduce 116


state 92
	mulop : '/' .  (117)

	.  reduce 117


state 93
	mulop : IDIV .  (118)

	.  reduce 118


state 94
	mulop : '%' .  (119)

	.  reduce 119


state 95
	term : term mulop . factor  (114)

	FALSE  shift 37
	TRUE  shift 38
	SELF  shift 40
	DEC_CONST  shift 41
	LITERAL  shift 42
	REAL_DEC_CONST  shift 43
	'('  shift 44
	'-'  shift 45
	ID  shift 46
	INC  shift 47
	DEC  shift 48
	.  error

	location  goto 53
	method  goto 54
	factor  goto 118
	incdec  goto 58


state 96
	decl : VAR ID ':' type '[' DEC_CONST ']' . $$7 vars separator  (45)
	$$7 : .  (44)

	.  reduce 44

	$$7  goto 119


state 97
	vars : ',' ID . $$9 vars  (49)
	vars : ',' ID . '=' expr $$10 vars  (51)
	$$9 : .  (48)

	'='  shift 120
	';'  reduce 48
	','  reduce 48

	$$9  goto 121


state 98
	separator : ';' .  (83)

	.  reduce 83


state 99
	decl : VAR ID ':' type $$6 vars separator .  (43)

	.  reduce 43


state 100
	field : '@' ID . ':' type attrs  (16)
	field : '@' ID . ':' type '=' expr attrs  (17)

	':'  shift 122
	.  error


state 101
	bodyclass : '{' fields meth_list . '}'  (21)

	'}'  shift 123
	.  error


state 102
	meth : modifier . ID $$2 '(' params ')' RIGHTARROW type $$3 body  (24)

	ID  shift 124
	.  error


state 103
	meth_list : methodef . meth_list  (6)
	meth_list : .  (7)
	modifier : .  (11)

	PUBLIC  shift 2
	ABSTRACT  shift 3
	'}'  reduce 7
	ID  reduce 11

	meth_list  goto 125
	modifier  goto 102
	methodef  goto 103
	meth  goto 104


state 104
	methodef : meth .  (8)

	.  reduce 8


state 105
	fields : field fields .  (14)

	.  reduce 14


state 106
	func : FUNC ID $$4 '(' params ')' RIGHTARROW type . $$5 body  (27)
	$$5 : .  (26)

	.  reduce 26

	$$5  goto 126


state 107
	params : formals ID ':' type .  (28)
	formals : formals ID ':' type . ','  (30)

	','  shift 127
	')'  reduce 28


state 108
	factor : '(' expr ')' .  (121)

	.  reduce 121


state 109
	method : ID .  (94)

	.  reduce 94


state 110
	factor : ID '.' method . '(' actuals ')'  (129)

	'('  shift 128
	.  error


state 111
	expr : expr OR logAnd_expr .  (96)
	logAnd_expr : logAnd_expr . AND not_expr  (98)

	AND  shift 77
	IF  reduce 96
	TIMES  reduce 96
	UNLESS  reduce 96
	OR  reduce 96
	PUBLIC  reduce 96
	ABSTRACT  reduce 96
	')'  reduce 96
	'}'  reduce 96
	';'  reduce 96
	','  reduce 96
	ID  reduce 96
	'@'  reduce 96


state 112
	decl : VAR ID ':' type '=' expr $$8 vars . separator  (47)

	';'  shift 98
	.  error

	separator  goto 129


state 113
	logAnd_expr : logAnd_expr AND not_expr .  (98)

	.  reduce 98


state 114
	factor : method '(' actuals . ')'  (128)

	')'  shift 130
	.  error


state 115
	actuals : args . expr  (137)
	args : args . expr ','  (139)

	FALSE  shift 37
	TRUE  shift 38
	NOT  shift 39
	SELF  shift 40
	DEC_CONST  shift 41
	LITERAL  shift 42
	REAL_DEC_CONST  shift 43
	'('  shift 44
	'-'  shift 45
	ID  shift 46
	INC  shift 47
	DEC  shift 48
	.  error

	expr  goto 131
	logAnd_expr  goto 50
	not_expr  goto 51
	comp_expr  goto 52
	location  goto 53
	method  goto 54
	add_expr  goto 55
	term  goto 56
	factor  goto 57
	incdec  goto 58


state 116
	comp_expr : add_expr relop add_expr .  (102)
	add_expr : add_expr . addop term  (110)

	'+'  shift 81
	'-'  shift 82
	IF  reduce 102
	TIMES  reduce 102
	UNLESS  reduce 102
	AND  reduce 102
	OR  reduce 102
	PUBLIC  reduce 102
	ABSTRACT  reduce 102
	')'  reduce 102
	'}'  reduce 102
	';'  reduce 102
	','  reduce 102
	ID  reduce 102
	'@'  reduce 102

	addop  goto 90


state 117
	add_expr : add_expr addop term .  (110)
	term : term . mulop factor  (114)

	'*'  shift 91
	'/'  shift 92
	IDIV  shift 93
	'%'  shift 94
	IF  reduce 110
	TIMES  reduce 110
	UNLESS  reduce 110
	AND  reduce 110
	OR  reduce 110
	PUBLIC  reduce 110
	ABSTRACT  reduce 110
	')'  reduce 110
	'}'  reduce 110
	'+'  reduce 110
	'-'  reduce 110
	';'  reduce 110
	','  reduce 110
	GE  reduce 110
	'>'  reduce 110
	LE  reduce 110
	'<'  reduce 110
	NE  reduce 110
	EQ  reduce 110
	ID  reduce 110
	'@'  reduce 110

	mulop  goto 95


state 118
	term : term mulop factor .  (114)

	.  reduce 114


state 119
	decl : VAR ID ':' type '[' DEC_CONST ']' $$7 . vars separator  (45)
	vars : .  (52)

	','  shift 60
	';'  reduce 52

	vars  goto 132


state 120
	vars : ',' ID '=' . expr $$10 vars  (51)

	FALSE  shift 37
	TRUE  shift 38
	NOT  shift 39
	SELF  shift 40
	DEC_CONST  shift 41
	LITERAL  shift 42
	REAL_DEC_CONST  shift 43
	'('  shift 44
	'-'  shift 45
	ID  shift 46
	INC  shift 47
	DEC  shift 48
	.  error

	expr  goto 133
	logAnd_expr  goto 50
	not_expr  goto 51
	comp_expr  goto 52
	location  goto 53
	method  goto 54
	add_expr  goto 55
	term  goto 56
	factor  goto 57
	incdec  goto 58


state 121
	vars : ',' ID $$9 . vars  (49)
	vars : .  (52)

	','  shift 60
	';'  reduce 52

	vars  goto 134


state 122
	field : '@' ID ':' . type attrs  (16)
	field : '@' ID ':' . type '=' expr attrs  (17)

	INT  shift 21
	REAL  shift 22
	BOOL  shift 23
	STR  shift 24
	ID  shift 25
	.  error

	type  goto 135


state 123
	bodyclass : '{' fields meth_list '}' .  (21)

	.  reduce 21


state 124
	meth : modifier ID . $$2 '(' params ')' RIGHTARROW type $$3 body  (24)
	$$2 : .  (22)

	.  reduce 22

	$$2  goto 136


state 125
	meth_list : methodef meth_list .  (6)

	.  reduce 6


state 126
	func : FUNC ID $$4 '(' params ')' RIGHTARROW type $$5 . body  (27)

	'{'  shift 137
	.  error

	body  goto 138


state 127
	formals : formals ID ':' type ',' .  (30)

	.  reduce 30


state 128
	factor : ID '.' method '(' . actuals ')'  (129)
	actuals : .  (138)
	args : .  (140)

	FALSE  reduce 140
	TRUE  reduce 140
	NOT  reduce 140
	SELF  reduce 140
	DEC_CONST  reduce 140
	LITERAL  reduce 140
	REAL_DEC_CONST  reduce 140
	'('  reduce 140
	')'  reduce 138
	'-'  reduce 140
	ID  reduce 140
	INC  reduce 140
	DEC  reduce 140

	actuals  goto 139
	args  goto 115


state 129
	decl : VAR ID ':' type '=' expr $$8 vars separator .  (47)

	.  reduce 47


state 130
	factor : method '(' actuals ')' .  (128)

	.  reduce 128


state 131
	expr : expr . OR logAnd_expr  (96)
	actuals : args expr .  (137)
	args : args expr . ','  (139)

	OR  shift 75
	','  shift 140
	')'  reduce 137


state 132
	decl : VAR ID ':' type '[' DEC_CONST ']' $$7 vars . separator  (45)

	';'  shift 98
	.  error

	separator  goto 141


state 133
	vars : ',' ID '=' expr . $$10 vars  (51)
	expr : expr . OR logAnd_expr  (96)
	$$10 : .  (50)

	OR  shift 75
	';'  reduce 50
	','  reduce 50

	$$10  goto 142


state 134
	vars : ',' ID $$9 vars .  (49)

	.  reduce 49


state 135
	field : '@' ID ':' type . attrs  (16)
	field : '@' ID ':' type . '=' expr attrs  (17)
	attrs : .  (20)

	'='  shift 143
	','  shift 144
	PUBLIC  reduce 20
	ABSTRACT  reduce 20
	'}'  reduce 20
	ID  reduce 20
	'@'  reduce 20

	attrs  goto 145


state 136
	meth : modifier ID $$2 . '(' params ')' RIGHTARROW type $$3 body  (24)

	'('  shift 146
	.  error


state 137
	body : '{' . decls stmts '}'  (37)
	decls : .  (39)
	decl_list : .  (41)

	FALSE  reduce 39
	TRUE  reduce 39
	RETURN  reduce 39
	IF  reduce 39
	WHILE  reduce 39
	BREAK  reduce 39
	READ  reduce 39
	PRINTLN  reduce 39
	NOT  reduce 39
	VAR  reduce 41
	SELF  reduce 39
	DEC_CONST  reduce 39
	LITERAL  reduce 39
	REAL_DEC_CONST  reduce 39
	'('  reduce 39
	'{'  reduce 39
	'}'  reduce 39
	'-'  reduce 39
	';'  reduce 39
	ID  reduce 39
	INC  reduce 39
	DEC  reduce 39

	decls  goto 147
	decl_list  goto 148


state 138
	func : FUNC ID $$4 '(' params ')' RIGHTARROW type $$5 body .  (27)

	.  reduce 27


state 139
	factor : ID '.' method '(' actuals . ')'  (129)

	')'  shift 149
	.  error


state 140
	args : args expr ',' .  (139)

	.  reduce 139


state 141
	decl : VAR ID ':' type '[' DEC_CONST ']' $$7 vars separator .  (45)

	.  reduce 45


state 142
	vars : ',' ID '=' expr $$10 . vars  (51)
	vars : .  (52)

	','  shift 60
	';'  reduce 52

	vars  goto 150


state 143
	field : '@' ID ':' type '=' . expr attrs  (17)

	FALSE  shift 37
	TRUE  shift 38
	NOT  shift 39
	SELF  shift 40
	DEC_CONST  shift 41
	LITERAL  shift 42
	REAL_DEC_CONST  shift 43
	'('  shift 44
	'-'  shift 45
	ID  shift 46
	INC  shift 47
	DEC  shift 48
	.  error

	expr  goto 151
	logAnd_expr  goto 50
	not_expr  goto 51
	comp_expr  goto 52
	location  goto 53
	method  goto 54
	add_expr  goto 55
	term  goto 56
	factor  goto 57
	incdec  goto 58


state 144
	attrs : ',' . ID attrs  (18)
	attrs : ',' . ID '=' expr attrs  (19)

	ID  shift 152
	.  error


state 145
	field : '@' ID ':' type attrs .  (16)

	.  reduce 16


state 146
	meth : modifier ID $$2 '(' . params ')' RIGHTARROW type $$3 body  (24)
	params : .  (29)
	formals : .  (31)

	')'  reduce 29
	ID  reduce 31
